src/main/java/org/acaro/graffiti/query/RDFPathParser.java
package org.acaro.graffiti.query;

import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.DFA;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteEarlyExitException;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

public class RDFPathParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "QUERY", "LOCATIONSTEP", "CONDITION", "FILTER", "FILTERFUNCTION", "SUBQUERY", "REPEAT", "SHORTESTPATH", "ENDNODEFUNCTION", "STARTNODE", "EDGE", "STRING", "INTVALUE", "TEXTVALUE", "WS", "'::'", "'>'", "'.'", "'['", "']'", "'EQUALS('", "')'", "'SUFFIX('", "'PREFIX('", "'MIN('", "'MAX('", "'='", "'('", "'(*'", "'COUNT()'", "'SUM()'", "'AVG()'", "'MIN()'", "'MAX()'", "'DISTANCE('", "'*'"
    };
    public static final int EOF=-1;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int QUERY=4;
    public static final int LOCATIONSTEP=5;
    public static final int CONDITION=6;
    public static final int FILTER=7;
    public static final int FILTERFUNCTION=8;
    public static final int SUBQUERY=9;
    public static final int REPEAT=10;
    public static final int SHORTESTPATH=11;
    public static final int ENDNODEFUNCTION=12;
    public static final int STARTNODE=13;
    public static final int EDGE=14;
    public static final int STRING=15;
    public static final int INTVALUE=16;
    public static final int TEXTVALUE=17;
    public static final int WS=18;

    // delegates
    // delegators


        public RDFPathParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public RDFPathParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return RDFPathParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g"; }


    public static class query_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "query"
    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:20:1: query : startNode '::' locationStep ( '>' locationStep )* ( '.' endNodeFunction )? -> ^( QUERY startNode ( locationStep )+ ( endNodeFunction )? ) ;
    public final RDFPathParser.query_return query() throws RecognitionException {
        RDFPathParser.query_return retval = new RDFPathParser.query_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal2=null;
        Token char_literal4=null;
        Token char_literal6=null;
        RDFPathParser.startNode_return startNode1 = null;

        RDFPathParser.locationStep_return locationStep3 = null;

        RDFPathParser.locationStep_return locationStep5 = null;

        RDFPathParser.endNodeFunction_return endNodeFunction7 = null;


        Object string_literal2_tree=null;
        Object char_literal4_tree=null;
        Object char_literal6_tree=null;
        RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleTokenStream stream_19=new RewriteRuleTokenStream(adaptor,"token 19");
        RewriteRuleSubtreeStream stream_endNodeFunction=new RewriteRuleSubtreeStream(adaptor,"rule endNodeFunction");
        RewriteRuleSubtreeStream stream_startNode=new RewriteRuleSubtreeStream(adaptor,"rule startNode");
        RewriteRuleSubtreeStream stream_locationStep=new RewriteRuleSubtreeStream(adaptor,"rule locationStep");
        try {
            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:21:2: ( startNode '::' locationStep ( '>' locationStep )* ( '.' endNodeFunction )? -> ^( QUERY startNode ( locationStep )+ ( endNodeFunction )? ) )
            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:21:4: startNode '::' locationStep ( '>' locationStep )* ( '.' endNodeFunction )?
            {
            pushFollow(FOLLOW_startNode_in_query74);
            startNode1=startNode();

            state._fsp--;

            stream_startNode.add(startNode1.getTree());
            string_literal2=(Token)match(input,19,FOLLOW_19_in_query76);  
            stream_19.add(string_literal2);

            pushFollow(FOLLOW_locationStep_in_query78);
            locationStep3=locationStep();

            state._fsp--;

            stream_locationStep.add(locationStep3.getTree());
            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:21:32: ( '>' locationStep )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==20) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:21:33: '>' locationStep
            	    {
            	    char_literal4=(Token)match(input,20,FOLLOW_20_in_query81);  
            	    stream_20.add(char_literal4);

            	    pushFollow(FOLLOW_locationStep_in_query83);
            	    locationStep5=locationStep();

            	    state._fsp--;

            	    stream_locationStep.add(locationStep5.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:21:52: ( '.' endNodeFunction )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==21) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:21:53: '.' endNodeFunction
                    {
                    char_literal6=(Token)match(input,21,FOLLOW_21_in_query88);  
                    stream_21.add(char_literal6);

                    pushFollow(FOLLOW_endNodeFunction_in_query90);
                    endNodeFunction7=endNodeFunction();

                    state._fsp--;

                    stream_endNodeFunction.add(endNodeFunction7.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: locationStep, startNode, endNodeFunction
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 22:3: -> ^( QUERY startNode ( locationStep )+ ( endNodeFunction )? )
            {
                // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:22:6: ^( QUERY startNode ( locationStep )+ ( endNodeFunction )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(QUERY, "QUERY"), root_1);

                adaptor.addChild(root_1, stream_startNode.nextTree());
                if ( !(stream_locationStep.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_locationStep.hasNext() ) {
                    adaptor.addChild(root_1, stream_locationStep.nextTree());

                }
                stream_locationStep.reset();
                // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:22:38: ( endNodeFunction )?
                if ( stream_endNodeFunction.hasNext() ) {
                    adaptor.addChild(root_1, stream_endNodeFunction.nextTree());

                }
                stream_endNodeFunction.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "query"

    public static class locationStep_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "locationStep"
    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:25:1: locationStep : ( edge ( condition )* -> ^( LOCATIONSTEP edge ( condition )* ) | edge ( condition )* repeat -> ^( LOCATIONSTEP edge ( condition )* repeat ) | edge ( condition )* shortestPath -> ^( LOCATIONSTEP edge ( condition )* shortestPath ) );
    public final RDFPathParser.locationStep_return locationStep() throws RecognitionException {
        RDFPathParser.locationStep_return retval = new RDFPathParser.locationStep_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RDFPathParser.edge_return edge8 = null;

        RDFPathParser.condition_return condition9 = null;

        RDFPathParser.edge_return edge10 = null;

        RDFPathParser.condition_return condition11 = null;

        RDFPathParser.repeat_return repeat12 = null;

        RDFPathParser.edge_return edge13 = null;

        RDFPathParser.condition_return condition14 = null;

        RDFPathParser.shortestPath_return shortestPath15 = null;


        RewriteRuleSubtreeStream stream_edge=new RewriteRuleSubtreeStream(adaptor,"rule edge");
        RewriteRuleSubtreeStream stream_condition=new RewriteRuleSubtreeStream(adaptor,"rule condition");
        RewriteRuleSubtreeStream stream_shortestPath=new RewriteRuleSubtreeStream(adaptor,"rule shortestPath");
        RewriteRuleSubtreeStream stream_repeat=new RewriteRuleSubtreeStream(adaptor,"rule repeat");
        try {
            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:26:2: ( edge ( condition )* -> ^( LOCATIONSTEP edge ( condition )* ) | edge ( condition )* repeat -> ^( LOCATIONSTEP edge ( condition )* repeat ) | edge ( condition )* shortestPath -> ^( LOCATIONSTEP edge ( condition )* shortestPath ) )
            int alt6=3;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:26:4: edge ( condition )*
                    {
                    pushFollow(FOLLOW_edge_in_locationStep121);
                    edge8=edge();

                    state._fsp--;

                    stream_edge.add(edge8.getTree());
                    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:26:9: ( condition )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==22) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:26:9: condition
                    	    {
                    	    pushFollow(FOLLOW_condition_in_locationStep123);
                    	    condition9=condition();

                    	    state._fsp--;

                    	    stream_condition.add(condition9.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);



                    // AST REWRITE
                    // elements: edge, condition
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 27:3: -> ^( LOCATIONSTEP edge ( condition )* )
                    {
                        // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:27:6: ^( LOCATIONSTEP edge ( condition )* )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(LOCATIONSTEP, "LOCATIONSTEP"), root_1);

                        adaptor.addChild(root_1, stream_edge.nextTree());
                        // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:27:26: ( condition )*
                        while ( stream_condition.hasNext() ) {
                            adaptor.addChild(root_1, stream_condition.nextTree());

                        }
                        stream_condition.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:28:4: edge ( condition )* repeat
                    {
                    pushFollow(FOLLOW_edge_in_locationStep143);
                    edge10=edge();

                    state._fsp--;

                    stream_edge.add(edge10.getTree());
                    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:28:9: ( condition )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==22) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:28:9: condition
                    	    {
                    	    pushFollow(FOLLOW_condition_in_locationStep145);
                    	    condition11=condition();

                    	    state._fsp--;

                    	    stream_condition.add(condition11.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);

                    pushFollow(FOLLOW_repeat_in_locationStep148);
                    repeat12=repeat();

                    state._fsp--;

                    stream_repeat.add(repeat12.getTree());


                    // AST REWRITE
                    // elements: condition, edge, repeat
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 29:3: -> ^( LOCATIONSTEP edge ( condition )* repeat )
                    {
                        // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:29:6: ^( LOCATIONSTEP edge ( condition )* repeat )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(LOCATIONSTEP, "LOCATIONSTEP"), root_1);

                        adaptor.addChild(root_1, stream_edge.nextTree());
                        // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:29:26: ( condition )*
                        while ( stream_condition.hasNext() ) {
                            adaptor.addChild(root_1, stream_condition.nextTree());

                        }
                        stream_condition.reset();
                        adaptor.addChild(root_1, stream_repeat.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:30:4: edge ( condition )* shortestPath
                    {
                    pushFollow(FOLLOW_edge_in_locationStep169);
                    edge13=edge();

                    state._fsp--;

                    stream_edge.add(edge13.getTree());
                    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:30:9: ( condition )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==22) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:30:9: condition
                    	    {
                    	    pushFollow(FOLLOW_condition_in_locationStep171);
                    	    condition14=condition();

                    	    state._fsp--;

                    	    stream_condition.add(condition14.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);

                    pushFollow(FOLLOW_shortestPath_in_locationStep174);
                    shortestPath15=shortestPath();

                    state._fsp--;

                    stream_shortestPath.add(shortestPath15.getTree());


                    // AST REWRITE
                    // elements: condition, shortestPath, edge
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 31:3: -> ^( LOCATIONSTEP edge ( condition )* shortestPath )
                    {
                        // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:31:6: ^( LOCATIONSTEP edge ( condition )* shortestPath )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(LOCATIONSTEP, "LOCATIONSTEP"), root_1);

                        adaptor.addChild(root_1, stream_edge.nextTree());
                        // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:31:26: ( condition )*
                        while ( stream_condition.hasNext() ) {
                            adaptor.addChild(root_1, stream_condition.nextTree());

                        }
                        stream_condition.reset();
                        adaptor.addChild(root_1, stream_shortestPath.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "locationStep"

    public static class condition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "condition"
    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:34:1: condition : '[' ( filter -> ^( CONDITION filter ) | subquery -> ^( CONDITION subquery ) ) ']' ;
    public final RDFPathParser.condition_return condition() throws RecognitionException {
        RDFPathParser.condition_return retval = new RDFPathParser.condition_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal16=null;
        Token char_literal19=null;
        RDFPathParser.filter_return filter17 = null;

        RDFPathParser.subquery_return subquery18 = null;


        Object char_literal16_tree=null;
        Object char_literal19_tree=null;
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleSubtreeStream stream_filter=new RewriteRuleSubtreeStream(adaptor,"rule filter");
        RewriteRuleSubtreeStream stream_subquery=new RewriteRuleSubtreeStream(adaptor,"rule subquery");
        try {
            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:35:2: ( '[' ( filter -> ^( CONDITION filter ) | subquery -> ^( CONDITION subquery ) ) ']' )
            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:35:4: '[' ( filter -> ^( CONDITION filter ) | subquery -> ^( CONDITION subquery ) ) ']'
            {
            char_literal16=(Token)match(input,22,FOLLOW_22_in_condition201);  
            stream_22.add(char_literal16);

            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:35:8: ( filter -> ^( CONDITION filter ) | subquery -> ^( CONDITION subquery ) )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==24||(LA7_0>=26 && LA7_0<=29)) ) {
                alt7=1;
            }
            else if ( (LA7_0==TEXTVALUE) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:35:10: filter
                    {
                    pushFollow(FOLLOW_filter_in_condition205);
                    filter17=filter();

                    state._fsp--;

                    stream_filter.add(filter17.getTree());


                    // AST REWRITE
                    // elements: filter
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 35:17: -> ^( CONDITION filter )
                    {
                        // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:35:20: ^( CONDITION filter )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CONDITION, "CONDITION"), root_1);

                        adaptor.addChild(root_1, stream_filter.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:36:4: subquery
                    {
                    pushFollow(FOLLOW_subquery_in_condition219);
                    subquery18=subquery();

                    state._fsp--;

                    stream_subquery.add(subquery18.getTree());


                    // AST REWRITE
                    // elements: subquery
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 36:13: -> ^( CONDITION subquery )
                    {
                        // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:36:16: ^( CONDITION subquery )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CONDITION, "CONDITION"), root_1);

                        adaptor.addChild(root_1, stream_subquery.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }

            char_literal19=(Token)match(input,23,FOLLOW_23_in_condition230);  
            stream_23.add(char_literal19);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "condition"

    public static class filter_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "filter"
    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:39:1: filter : filterFunction -> ^( FILTER filterFunction ) ;
    public final RDFPathParser.filter_return filter() throws RecognitionException {
        RDFPathParser.filter_return retval = new RDFPathParser.filter_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        RDFPathParser.filterFunction_return filterFunction20 = null;


        RewriteRuleSubtreeStream stream_filterFunction=new RewriteRuleSubtreeStream(adaptor,"rule filterFunction");
        try {
            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:40:2: ( filterFunction -> ^( FILTER filterFunction ) )
            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:40:4: filterFunction
            {
            pushFollow(FOLLOW_filterFunction_in_filter241);
            filterFunction20=filterFunction();

            state._fsp--;

            stream_filterFunction.add(filterFunction20.getTree());


            // AST REWRITE
            // elements: filterFunction
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 41:3: -> ^( FILTER filterFunction )
            {
                // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:41:6: ^( FILTER filterFunction )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FILTER, "FILTER"), root_1);

                adaptor.addChild(root_1, stream_filterFunction.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "filter"

    public static class filterFunction_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "filterFunction"
    // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:44:1: filterFunction : (fn= 'EQUALS(' v= STRING ')' -> ^( FILTERFUNCTION $fn $v) | fn= 'EQUALS(' v= INTVALUE ')' -> ^( FILTERFUNCTION $fn $v) | fn= 'SUFFIX(' v= STRING ')' -> ^( FILTERFUNCTION $fn $v) | fn= 'PREFIX(' v= STRING ')' -> ^( FILTERFUNCTION $fn $v) | fn= 'MIN(' v= INTVALUE ')' -> ^( FILTERFUNCTION $fn $v) | fn= 'MAX(' v= INTVALUE ')' -> ^( FILTERFUNCTION $fn $v) );
    public final RDFPathParser.filterFunction_return filterFunction() throws RecognitionException {
        RDFPathParser.filterFunction_return retval = new RDFPathParser.filterFunction_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token fn=null;
        Token v=null;
        Token char_literal21=null;
        Token char_literal22=null;
        Token char_literal23=null;
        Token char_literal24=null;
        Token char_literal25=null;
        Token char_literal26=null;

        Object fn_tree=null;
        Object v_tree=null;
        Object char_literal21_tree=null;
        Object char_literal22_tree=null;
        Object char_literal23_tree=null;
        Object char_literal24_tree=null;
        Object char_literal25_tree=null;
        Object char_literal26_tree=null;
        RewriteRuleTokenStream stream_INTVALUE=new RewriteRuleTokenStream(adaptor,"token INTVALUE");
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");

        try {
            // /Users/hammer/TIS/java-hacking/graffiti/resources/RDFPath.g:45:2: (fn= 'EQUALS(' v= STRING ')' -> ^( FILTERFUNCTION $fn $v) | fn= 'EQUALS(' v= INTVALUE ')' -> ^( FILTERFUNCTION $fn $v) | fn= 'SUFFIX(' v= STRING ')' -> ^( FILTERFUNCTION $fn $v) | fn= 'PREFIX(' v= STRING ')' -> ^( FILTERFUNCTION $fn $v) | fn= 'MIN(' v= INTVALUE ')' -> ^( FILTERFUNCTION $fn $v) | fn= 'MAX(' v= INTVALUE ')' -> ^( FILTERFUNCTION $fn $v) )
            int alt8=6;
            switch ( input.LA(1) ) {
            case 24:
                {
                int LA8_1 = input.LA(2);

                if ( (LA8_1==STRING) ) {
                    alt8=1;
                }
                else if ( (LA8_1==INTVALUE) ) {
                    alt8=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 1, input);

                    throw nvae;
                }
                }
                break;
            case 26:
                {
                alt8=3;
                }
                break;
            case 27:
                {
                alt8=4;
                }
                break;
            case 28:
                {
                alt8=5;
                }
                break;
            case 29:
                {
                alt8=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }
